# ero

./: .env  Cargo.toml  ero.db  flake.nix
migrations/: 20230202191435_create_table_context.sql  20230202191435_create_table_entities.sql
src/: lib.rs  main.rs  parser.rs
src/parser/: mod.rs
