[package]
name = "ero"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.4"
clap = { version = "4.1.4", features = ["derive"] }
color-eyre = "0.6.2"
nom = "7.1.3"
num-bigint = { version = "0.4.3", features = ["serde"] }
num-traits = "0.2.15"
rustyline = "10.1.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
sqlx = { version = "0.6", features = [ "json", "runtime-tokio-native-tls" , "postgres" ] }
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
